# Planet-Generator-OpenGL

./: .gitignore  CMakeLists.txt  OpenGLPlanet.sln  README.md
OpenGLPlanet/: CMakeLists.txt  CMakePresets.json  OpenGLPlanet.vcxproj  OpenGLPlanet.vcxproj.filters  biomeDefs.glsl  engine.cpp  engine.h  fragment.glsl  geometry.glsl  globals.h  imgui.ini  mesh.cpp  mesh.h  noise.glsl  noiseLayer.h  noiseSettings.h  noisefilter.h  perlinNoiseFilter.cpp  perlinNoiseFilter.h  planetUI.cpp  planetUI.h  shader.cpp  shader.h  shapeSettings.h  shapesettings.cpp  sphere.cpp  vertex.glsl
OpenGLPlanet/planets/: planet_config.txt
OpenGLPlanet/shaders/: atmosphere.frag  atmosphere.vert  common.glsl  fragment.glsl  planet.frag  planet.vert
OpenGLPlanet/src/: engine.cpp  engine.h  globals.h  perlinNoiseFilter.h  planetUI.cpp  sphere.h
install/lib/pkgconfig/: glfw3.pc
planets/: planet_config2.txt
shaders/: atmosphere.frag  atmosphere.vert  biomeDefs.glsl  planet.frag  planet.geom  scattering.glsl
src/: engine.cpp  globals.h  main.cpp  noiseFilter.h  perlinNoiseFilter.cpp  planetUI.cpp  planetUI.h  shapeSettings.h  sphere.cpp
